Large screen width and overlap fix

--- a/css/amlcmu.webflow.css
+++ b/css/amlcmu.webflow.css
@@ -102,7 +102,7 @@ a {
   -webkit-align-items: stretch;
   -ms-flex-align: stretch;
   align-items: stretch;
-  border-radius: 5px;
+  border-radius: 8px;
   background-color: #f0f0f0;
   -webkit-transition: all 200ms ease-in;
   transition: all 200ms ease-in;
@@ -144,7 +144,7 @@ a {
 
 .cta-block {
   display: inline-block;
-  margin-top: 80px;
+  margin-top: 60px;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
@@ -601,6 +601,7 @@ a {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+  padding-top: 8vh;
 }
 
 .member-arrow {
@@ -972,3 +973,13 @@ a {
   }
 }
 
+
+/* *** for large screens *** */
+@media screen and (min-width: 1350px) {
+  .w-container  {
+    max-width: 1200px;
+  }
+  .full-vh-centre-align {
+    padding-top: 0vh;
+  }
+}
